# token-alchemy

./: .gitignore  COMMERCIAL_LICENSE.md  GUIDE.md  LICENSE  README.md  RESEARCH.md  pyproject.toml
examples/: before_after.py
prompt_compress/: __init__.py  abbreviation.py  codebook.py  compress.py  tokenizer.py  validation.py  vocab_pack.py
tests/: test_compress.py
vocab_packs/: example_marketing.json
