[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "token-alchemy"
version = "0.1.0"
description = "Three-layer LLM prompt compression: YAML + Abbreviation + Emoji Semantic Injection"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "Dicta Technologies Inc.", email = "philip@usedicta.com"},
]
keywords = ["llm", "prompt", "compression", "yaml", "emoji", "tokens"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
tokenizer = ["tiktoken>=0.5.0"]

[project.urls]
Homepage = "https://github.com/PRDicta/token-alchemy"

[tool.setuptools.packages.find]
include = ["prompt_compress*"]
